--- a/picom.conf
+++ b/picom.conf
@@ -27,6 +27,15 @@ shadow-exclude = [
     "class_g = 'Cairo-clock'"
 ];
 
+blur:
+{
+method = "gaussian";
+size = 20; 
+deviation = 15;
+};
 # Backend to use (xrender or glx)
 backend = "glx";
 vsync = true;
+
+
+# --blur-method dual_kawase --blur-strength 7.
