--- a/kitty.conf
+++ b/kitty.conf
@@ -1,5 +1,5 @@
 # font
-font_family        VictorMono  Nerd Font
+font_family        JetBrainsMono Nerd Font
 bold_font          auto
 italic_font        auto
 bold_italic_font   auto
